# realdetect

./: .gitignore  README.md  app.py  capture_webcam.py  detect.py  detection.py  main.py  pyproject.toml  requirements.txt  test.py
backend/: detection.py  image_to_text.py  utils.py
components/: interface.py  models.py  processing.py  webcam.py
demo/: demo_app.py
static/: index.html  script.js
templates/: index.html
tests/: test_detect_objects.py  test_image_to_text.py
train/: detect.py
